2015-05-24
- Added Silver Edge passives to debuff section.

2015-05-23
- Fixed Vladmir's Offering not giving mana regen from aura.
- Added Butterfly Flutter active.
- Added Boots of Travel level 2.
- Added consumed Moon Shard by activating it.

2015-05-09
- Fixed negative armor damage increase calculation.

2015-05-04
- Fixed Invoker stat gains from orbs not applying when ability is not toggled on.

2015-04-30
- Updated to patch 6.84

2015-04-06
- Fixed Medusa Mana Shield damage reduction.

2015-03-18
- Fixed Clinkz Death Pact damage increase not calculating.
- Added Veil of Discord to debuffs section.
- Added Bloodseeker Bloodrage.

2015-02-22
- Fixed delta value colors for stats where a lower value is better (attack time and BAT).

2015-02-20
- Added Vengeful Spirit Vengeance Aura debuff.

2015-02-12
- Added Winter Wyvern

2015-01-29
- Build Explorer data now included in saved builds.

2015-01-25
- Added Build Explorer feature.
	Input a skill and item build and generate a dataset for levels 1 to 25 using the hero calculator.
	All datasets displayed in a table and chart.
- Added copy (CTRL+C) and paste (CTRL+V) when hovering over item inventories.
	Can also be used in Build Explorer item build section.
- Added option to dock shop panel to right side of screen.

2014-12-28
- Added Sven God's Strength scepter aura to buffs.

2014-12-26
- Fixed Troll Warlord Berserker's Rage breaking health and EHP when activated.

2014-12-21
- Maximum Attack Speed increased from 500 to 600

2014-12-15
- Fixed Windranger Focus Fire not reducing damage.
- Fixed Magic Resistance not stacking according to the patch 6.82 change.

2014-12-05
- Added Riki Backstab.

2014-11-13
- Added Troll Warlord Battle Trance to buffs.

2014-11-12
- Updated values to match 6.82c.
- Fixed Homing Missile giving max attack speed.

2014-10-24
- Added Abaddon Curse of Avernus as debuff.
- Fixed Curse of Avernus attack speed slow not applying.
- Curse of Avernus can now be toggled on and off.