@@ -1,3 +1,14 @@
+2015-08-13
+- Added Radiance Burn Miss Chance debuff
+- EHP Physical calculation now accounts for enemy miss chance
+
+2015-07-15
+- Fixed Outworld Devourer Essence Aura not giving bonus mana.
+- Added Solar Crest Shine buff/debuff.
+
+2015-05-26
+- Fixed Vengeful Spirit Vengeance Aura
+
 2015-05-24
 - Added Silver Edge passives to debuff section.
 
